# routing-optimizer-ai

./: .env.example  .gitignore  README.md  pyproject.toml
data/: 0003_hospitais_capital_SP.csv  0010-hospitais_SP.csv  0150_estabelecimentos.csv  1225-estabelecimentos_SUS_SP.csv
data/datasets/: .gitkeep
data/datasets/0003_hospitais_capital_sp/: distance_matrix.npy  geocoded.json  metadata.json  original.csv
data/datasets/0010_hospitais_sp/: distance_matrix.npy  geocoded.json  metadata.json
data/datasets/0010hospitais_sp/: metadata.json  original.csv
data/datasets/0010hospitais_sp_2/: geocoded.json  metadata.json
data/datasets/0039_farmacias_sp/: distance_matrix.npy  metadata.json  original.csv
data/datasets/0039farmacias_sp/: geocoded.json  metadata.json
data/datasets/0150_estabelecimentos/: distance_matrix.npy  geocoded.json  metadata.json
data/datasets/1225_estabelecimentos_sus_sp/: metadata.json  original.csv
data/datasets/dataset/: distance_matrix.npy  (+2 more)
docs/: apresentacao_algoritmo_genetico.html
genetic_algorithm_tsp_enhanced/: README.md  draw_functions_enhanced.py  genetic_algorithm_enhanced.py  tsp_enhanced.py
genetic_algorithm_tsp_enhanced/backup/: draw_functions.py  tsp_base.py  tsp_enhanced_random_dlv.py
infra/: .gitignore  iam.tf  main.tf  outputs.tf  secrets.tf  security.tf  terraform.tfvars.example  userdata.sh  variables.tf
scripts/: verify_phase1.py  verify_phase2.py
src/routing_optimizer/: __init__.py
tests/: __init__.py  test_baselines.py  test_experiments.py  test_genetic_algorithm.py  test_llm.py  test_routing.py
(+34 files in other folders)
